Update submodule and remove obsolete security and quick start documentation. Enhance security configuration with dynamic CORS and role-based authorization. Refactor address and authentication controllers for improved error handling and new features, including email change verification and suspicious login alerts. Add new product endpoints for popular products and brand retrieval. Update user entity with additional fields for email change tracking and OTP management.